change footer color

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -28,6 +28,7 @@ $compcolor 		  : spin($basecolor, 180);
 $bordercolor    : $basecolor;
 $white          : #fff;
 $black          : #111;
+$footercolor    : #AAA;
 $accentcolor    : $black;
 
 /* buttons */
