--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -631,6 +631,7 @@ $button-size: 1.5rem;
 
 /* Footer wrapper */
 .footer-wrap {
+    color: $footercolor;
 	@include container;
 	@include clearfix;
 	clear: both;
