--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -107,9 +107,11 @@ a {
   color: $brand-color;
   text-decoration: none;
 
+/*
   &:visited {
     color: darken($brand-color, 15%);
   }
+*/
 
   &:hover {
     color: $text-color;
