--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,9 @@
 
     <!-- <h2 class="footer-heading">{{ site.title | escape }}</h2> -->
 
-<!--
     <div class="footer-col-wrapper">
+&copy; 2019 Shan Jiang
+<--
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li class="p-name">
@@ -29,8 +30,8 @@
       <div class="footer-col footer-col-3">
         <p>{{- site.description | escape -}}</p>
       </div>
-    </div>
 -->
+    </div>
   </div>
 
 </footer>
