--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -141,6 +141,7 @@
   @include relative-font-size(0.9375);
   color: $grey-color;
   margin-left: -$spacing-unit / 2;
+  text-align: center;
   @extend %clearfix;
 }
 
