--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
     <!-- <h2 class="footer-heading">{{ site.title | escape }}</h2> -->
 
     <div class="footer-col-wrapper">
-&copy; 2019 Shan Jiang
+<center> &copy; 2019 Shan Jiang </center>
 <!--
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
