update pricavy and tos links and format

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
 
     <div class="footer-col-wrapper">
 <center> &copy; 2020 Shan Jiang </center>
-<center> <a href="privacy">Privacy Policy</a> | <a href="tos">Terms of Service</a> </center>
+<center> <a href="https://shanjiang.me/privacy">Privacy Policy</a> | <a href="https://shanjiang.me/tos">Terms of Service</a> </center>
 <!--
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
