--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,7 @@
     <!-- <h2 class="footer-heading">{{ site.title | escape }}</h2> -->
 
     <div class="footer-col-wrapper">
-<center> &copy; 2020 Shan Jiang </center>
-<center> <a href="https://shanjiang.me/privacy">Privacy Policy</a> | <a href="https://shanjiang.me/tos">Terms of Service</a> </center>
+&copy; 2020 | <a href="/">Shan Jiang</a> | <a href="/privacy">Privacy Policy</a> | <a href="/tos">Terms of Service</a>
 <!--
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
