--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
     <!-- <h2 class="footer-heading">{{ site.title | escape }}</h2> -->
 
     <div class="footer-col-wrapper">
-&copy; 2020 | <a href="/">Shan Jiang</a> | <a href="/privacy">Privacy Policy</a> | <a href="/tos">Terms of Service</a>
+&copy; 2020 &middot; <a href="/">Shan Jiang</a> &middot; <a href="/privacy">Privacy Policy</a> &middot; <a href="/tos">Terms of Service</a>
 <!--
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
