change note size

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -98,8 +98,6 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: $base-font-weight;
 }
 
-
-
 /**
  * Links
  */
@@ -127,6 +125,13 @@ a {
   }
 }
 
+/**
+ * Comments
+ */
+.comment {
+  color: $grey-color;
+  font-size: $small-font-size;
+}
 
 /**
  * Blockquotes
