--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -41,7 +41,14 @@ ul, ol, dl, figure,
   margin-bottom: $spacing-unit / 2;
 }
 
-
+ul li::marker {
+  content: ">";
+  color: $brand-color;
+  font-weight: bold;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
+}
 
 /**
  * `main` element
