--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -3,15 +3,15 @@
 // Define defaults for each variable.
 
 $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$base-font-size:   14px !default;
+$base-font-size:   16px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.8 !default;
 $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #111 !default;
-$background-color: #fff !default;
+$text-color:       #111111 !default;
+$background-color: #ffffff !default;
 $brand-color:      #3c5a99 !default;
 
 $grey-color:       #828282 !default;
@@ -21,10 +21,10 @@ $orange-color:     #f66a0a !default;
 $table-text-align: left !default;
 
 // Width of the content area
-$content-width:    900px !default;
+$content-width:    950px !default;
 
 $on-palm:          600px !default;
-$on-laptop:        900px !default;
+$on-laptop:        950px !default;
 
 $on-medium:        $on-palm !default;
 $on-large:         $on-laptop !default;
