--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -85,10 +85,11 @@ li {
   > ol {
     margin-bottom: 0;
   }
+  padding-inline-start: 5px;
 }
 
 li::marker {
-  content: ">";
+  content: ">>";
   color: $brand-color;
   font-weight: bold;
 }
@@ -133,7 +134,6 @@ a {
  */
 .footnote {
   color: $grey-color;
-  font-size: $small-font-size;
 }
 
 /**
