--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -12,11 +12,15 @@ $spacing-unit:     30px !default;
 
 $text-color:       #111111 !default;
 $background-color: #ffffff !default;
+
 $brand-color:      #3c5a99 !default;
+$brand-color-light: lighten($brand-color, 40%) !default;
+$brand-color-dark:  darken($brand-color, 25%) !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
+
 $orange-color:     #f66a0a !default;
 $table-text-align: left !default;
 
