--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -206,7 +206,7 @@ pre {
 
 .label {
     display: inline;
-    padding: .2em .6em .3em;
+    padding: .2em .6em .2em;
     font-size: 75%;
     font-weight: 700;
     line-height: 1;
@@ -214,13 +214,20 @@ pre {
     text-align: center;
     white-space: nowrap;
     vertical-align: baseline;
-    border-radius: .25em;
+    border-radius: .3em;
 }
 
 .label-grey {
     background-color: $grey-color;
 }
 
+.label-brand {
+    background-color: $brand-color;
+}
+
+.label-brand-dark {
+    background-color: $brand-color-dark;
+}
 
 /**
  * Clearfix
