small fix typo and color

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -222,7 +222,7 @@ pre {
 }
 
 .label-brand {
-    background-color: $brand-color;
+    background-color: $brand-color-light;
 }
 
 .label-brand-dark {
