--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -206,7 +206,7 @@ pre {
 
 .label {
     display: inline;
-    padding: .22em .6em .22em;
+    padding: .2em .6em .2em;
     font-size: 75%;
     font-weight: 500;
     line-height: 1;
@@ -218,7 +218,7 @@ pre {
 }
 
 .label-grey {
-    background-color: $grey-color;
+    background-color: $grey-color-light;
 }
 
 .label-brand {
