--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -32,9 +32,9 @@
   position: absolute;
   top: 9px;
   right: $spacing-unit / 2;
-  background-color: $background-color;
-  border: 1px solid $grey-color-light;
-  border-radius: 5px;
+  // background-color: $background-color;
+  // border: 1px solid $grey-color-light;
+  // border-radius: 5px;
   text-align: right;
 
   .nav-trigger {
