--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -8,7 +8,7 @@ $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.8 !default;
 $base-line-height: 1.5 !default;
 
-$spacing-unit:     30px !default;
+$spacing-unit:     20px !default;
 
 $text-color:       #111111 !default;
 $background-color: #ffffff !default;
@@ -18,6 +18,7 @@ $brand-color-light: lighten($brand-color, 40%) !default;
 $brand-color-dark:  darken($brand-color, 25%) !default;
 
 $grey-color:       #828282 !default;
+$grey-color-dim: lighten($grey-color, 10%) !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
 
@@ -27,7 +28,7 @@ $table-text-align: left !default;
 // Width of the content area
 $content-width:    910px !default;
 
-$on-palm:          400px !default;
+$on-palm:          500px !default;
 $on-laptop:        910px !default;
 
 $on-medium:        $on-palm !default;
