--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -77,7 +77,8 @@ figcaption {
  * Lists
  */
 ul, ol {
-  margin-left: $spacing-unit;
+  // margin-left: $spacing-unit;
+  margin-left: 0px;
 }
 
 li {
