--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,14 +8,11 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=2020">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=2020">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=2020">
-  <link rel="manifest" href="/site.webmanifest?v=2020">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg?v=2020" color="#3c5a99">
-  <link rel="shortcut icon" href="/favicon.ico?v=2020">
-  <meta name="apple-mobile-web-app-title" content="Shan Jiang">
-  <meta name="application-name" content="Shan Jiang">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#1877f2">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
 </head>
