--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -13,7 +13,7 @@ $spacing-unit:     24px !default;
 $text-color:       #111111 !default;
 $background-color: #ffffff !default;
 
-$brand-color:      #3c5a99 !default;
+$brand-color:       #1877f2 !default;
 $brand-color-light: lighten($brand-color, 40%) !default;
 $brand-color-dark:  darken($brand-color, 25%) !default;
 
