--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -207,7 +207,7 @@ pre {
 
 .label {
     display: inline;
-    padding: .2em .6em .2em;
+    padding: .18em .56em .18em;
     font-size: 75%;
     font-weight: 500;
     line-height: 1;
@@ -223,7 +223,7 @@ pre {
 }
 
 .label-brand {
-    background-color: $brand-color;
+    background-color: $brand-color-light;
 }
 
 .label-brand-dark {
