--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -14,7 +14,7 @@ $text-color:       #111111 !default;
 $background-color: #ffffff !default;
 
 $brand-color:       #1877f2 !default;
-$brand-color-light: lighten($brand-color, 40%) !default;
+$brand-color-light: #60a2f6 !default;
 $brand-color-dark:  darken($brand-color, 25%) !default;
 
 $grey-color:       #828282 !default;
