--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -30,6 +30,15 @@ body {
 }
 
 
+/**
+ * Title color
+ */
+h2 {
+  color: $grey-color;
+}
+
+
+
 
 /**
  * Set `margin-bottom` to maintain vertical rhythm
