--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -74,7 +74,7 @@
   }
 
   .page-link {
-    color: $grey-color;
+    color: $text-color;
     line-height: $base-line-height;
     display: block;
     padding: 5px 10px;
