--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -17,8 +17,8 @@ $brand-color:       #1877f2 !default;
 $brand-color-light: #60a2f6 !default;
 $brand-color-dark:  darken($brand-color, 25%) !default;
 
-$grey-color:       #828282 !default;
-$grey-color-dim: lighten($grey-color, 10%) !default;
+$grey-color:       #999999 !default;
+$grey-color-dim:   lighten($grey-color, 10%) !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
 
@@ -26,10 +26,10 @@ $orange-color:     #f66a0a !default;
 $table-text-align: left !default;
 
 // Width of the content area
-$content-width:    800px !default;
-
-$on-palm:          400px !default;
-$on-laptop:        800px !default;
+$content-width:    750px !default;
+/*  */
+$on-palm:          500px !default;
+$on-laptop:        750px !default;
 
 $on-medium:        $on-palm !default;
 $on-large:         $on-laptop !default;
