--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -17,7 +17,7 @@ $brand-color:       #1877f2 !default;
 $brand-color-light: #60a2f6 !default;
 $brand-color-dark:  darken($brand-color, 25%) !default;
 
-$grey-color:       #999999 !default;
+$grey-color:       #AAAAAA !default;
 $grey-color-dim:   lighten($grey-color, 10%) !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
